# fast-ternary-convolution

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  autotune.py  autotune_results.csv  bench  bench_daniel  bench_incr  bench_rudy  benchmark.csv  indirect_conv.py  requirements.txt
bench/: CMakeLists.txt  fib_bench.cc
codegen/: __main__.py  ssa.py  straightforward.py  unrolled.py  vector.py  vector_unrolled.py
include/: alloc.hpp  bench.hpp  common.hpp  direct.hpp  impl.hpp  measure.hpp  problem_data.hpp  problem_parameters.hpp  registry.hpp  table.hpp  tensor.hpp  tensor_macros0.hpp  tensor_macros1.hpp  tensor_macros2.hpp  test.hpp  tsc.hpp  verify.hpp  verify_util.hpp
include/asl/: fib.hh
include/impl/: baseline.hpp  vectorized.hpp
include/impl/all_opts_merged/: gemm.hpp  quantize_im2row.hpp  tab.hpp
include/impl/all_opts_merged_avx2/: tab.hpp
include/impl/avx2/: gemm_avx512_autogen.hpp  tab.hpp
include/impl/avx2_lessunpack/: gemm_avx512_autogen.hpp  tab.hpp
include/impl/avx2_lessunpack_popout/: gemm_avx512_autogen.hpp
include/impl/avx2_popout/: gemm_avx512_autogen.hpp
include/impl/avx2_test/: gemm_avx512_autogen.hpp  tab.hpp
include/impl/baseline/: activate.hpp  activation.hpp  common.hpp  gemm.hpp  img2row.hpp  quantize.hpp  tab.hpp  utility.hpp
include/impl/baseline_nchw/: quantize.hpp  tab.hpp
include/impl/baseline_nhwc/: budget_tab.hpp  gemm.hpp  im2row.hpp  prelu.hpp  quantize.hpp  tab.hpp
include/impl/baseline_original/: activation.hpp  gemm.hpp  im2row.hpp  quantize.hpp  tab.hpp
include/impl/gemm_avx512_autogen/: gemm_avx512_autogen.hpp  tab.hpp
include/impl/gemm_avx512_manual/: gemm_avx512_manual.hpp  tab.hpp
include/impl/indirect/: gemm.hpp  tab.hpp
parameters/: autotune.csv  bar.csv  batch_size.csv  batch_size_lg.csv  batch_size_md.csv  channels.csv  channels_big_padding.csv  channels_big_stride.csv  daniel_plot1.csv  daniel_plot2.csv  daniel_plot3.csv  daniel_plot4.csv  diff_kernels.csv  fc.csv  incr_hw.csv  incr_stride.csv  input_size_md.csv  plot1.csv  plot2.csv  rudy_plot1.csv  vtune-fc.csv  vtune-large-stride.csv  vtune-yolo.csv
plotting/: compile_data.py  dimensions.py  filter_csv.py  impl.py  machine_info.py  plotter.py  plotter1.py  plotter2.py  plotter3.py  requirements.txt  roofline.py  setup.py  speedup.py  update_csv.py  utils.py
plotting/impls/: baseline.py  best_impl_avx2.py  best_impl_avx512.py  t2r_gemmLU.py
scripts/: autotune_gemm_k.py  bench_all  bench_all_final  bench_all_final2  bench_avx2_final  bench_daniel  bench_data_order  bench_fc_vs_incr_c  bench_improved_tern2row  bench_naive_tern2row  bench_roofline  bench_roofline_all  bench_sinline  bench_ternary_operator  bench_tmacros  bench_wishlist  notify  update_avx2
src/: CMakeLists.txt  baseline.cpp  bench.cpp  common.cpp  direct.cpp  fib.cc  impl.cpp  main.cpp  measure.cpp  nhwc.cpp  problem_data.cpp  problem_parameters.cpp  registry.cpp  table.cpp  test.cpp  vectorized.cpp  verify.cpp
src/impl/: baseline.cpp  vectorized.cpp
test/: CMakeLists.txt  fib_test.cc  run_all.cc
(+453 files in other folders)
